--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app"></div>
     <script src="./build.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>(function(){var socket = io.connect();})();</script>    
   </body>
 </html>
