--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div id="app"></div>
     <script src="./build.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>(function(){var socket = io.connect();})();</script>    
+    <script>
+    	(function(){
+    		var socket = io.connect();
+		})();
+	</script>    
   </body>
 </html>
