--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     	(function(){
     		var socket = io.connect();
 		})();
+
+    var board = document.getElementById('board');
+    var width = board.clientWidth + 'px';
+    board.style.height = width;
 	</script>    
   </body>
 </html>
