--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     		var socket = io.connect();
 		})();
 
-	    var board = document.getElementById('board');
-	    var width = board.clientWidth + 'px';
-	    board.style.height = width;
+	   
+
+      function AdaptBoard(){
+      var board = document.getElementById('board');
+      var width = board.clientWidth + 'px';
+      board.style.height = width;
+      };
+      setInterval(AdaptBoard,1);
 	</script>    
   </body>
 </html>
